--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 @charset "utf 8";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
+
 
 :root {
     --blue: rgba(51, 119, 170, 1);
@@ -15,7 +17,7 @@
 body {
     font-size: 16px;
     line-height: 1.5;
-    font-family: ;
+    font-family: 'Montserrat', sans-serif;
     color: #333;
     height: 100%;
 }
