--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     --blue: rgba(51, 119, 170, 1);
     --blue-5: rgba(51, 119, 170, 0.5);
     --blue-8: rgba(51, 119, 170, 0.8);
-    --brown: rgba(100, 50, 25, 1);
+    --brown: rgb(79, 45, 108);
 }
 
 * {
@@ -60,4 +60,8 @@ header img {
     box-shadow: 0 0 30px #444;
     float: right;
     border-radius: 0 10px 0 0;
+}
+
+footer {
+    font-size: 0.8rem;
 }
