--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     font-family: 'Montserrat', sans-serif;
-    color: #333;
+    color: rgb(79, 45, 108);
     height: 100%;
 }
 
