--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     --blue: rgba(51, 119, 170, 1);
     --blue-5: rgba(51, 119, 170, 0.5);
     --blue-8: rgba(51, 119, 170, 0.8);
-    --brown: rgb(71, 40, 97);
+    --purple: rgb(71, 40, 97);
 }
 
 * {
@@ -49,7 +49,7 @@ header nav {
 
 header, footer {
     text-align: center;
-    background-color: var(--brown);
+    background-color: var(--purple);
     color: #fff;
     border-radius: 10px;
 }
