--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,7 @@
 @charset "utf 8";
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Tapestry&display=swap');
 
 :root {
-    --blue: rgba(51, 119, 170, 1);
-    --blue-5: rgba(51, 119, 170, 0.5);
-    --blue-8: rgba(51, 119, 170, 0.8);
     --purple: rgb(71, 40, 97);
 }
 
@@ -25,6 +21,8 @@ body {
 h1 {
     font-size: 2.5rem;
     margin: 0.15rem;
+    letter-spacing: 3px;
+    font-family: 'Tapestry', cursive;
 }
 
 h2 {
@@ -43,7 +41,7 @@ footer {
 }
 
 header nav {
-    background-color: var(--blue);
+    background-color: var(--purple);
     color: #fff;
 }
 
@@ -55,20 +53,12 @@ header, footer {
     align-items: center;
 }
 
-header img {
-    width: 200px;
-    height: auto;
-    box-shadow: 0 0 30px #444;
-    float: right;
-    border-radius: 0 10px 0 0;
-}
-
 footer {
     font-size: 0.8rem;
 }
 
 
 header, main, footer {
-    max-width: 500px;
+    max-width: 1000px;
     margin: 0 auto;
 }
