--- a/lesson02/style.css
+++ b/lesson02/style.css
@@ -25,44 +25,69 @@
     
     p {
         background-color: white;
-        border-radius: 30px 30px 100px 0px;
+        border-radius: 30px 20px 60px 0px;
         padding: 1em;
         font-size: large;
         font-family: 'Josefin Sans', sans-serif;
         text-align: center;
     }
-    
-    .scrolling-preview {
-        overflow-y: scroll;
-        height: 525px;
-        max-width: fit-content;
-        align-items: center;
-        border-radius: 0px 0px 0px 100px;
-    }
-    
+
     h2 {
         background-color: #000000;
         color: #813e96;
-        line-height: 50px;
+        line-height: 40px;
         margin-top: 30px;
-        margin-bottom: -30px; 
+        margin-bottom: -20px; 
         font-size: 2.7em;
         text-align: center;
         border-radius: 30px 30px 0px 0px;
-    }
-    
-    h2 {
         border-top: 5px double;
         padding: 0.5em;
     }
+
+    .second-heading {
+        background-color: #000000;
+        color: #813e96;
+        line-height: 40px;
+        margin-top: 30px;
+        margin-bottom: 50px; 
+        font-size: 2.7em;
+        text-align: center;
+        border-radius: 30px 30px 0px 0px;
+        border-top: 5px double;
+        padding: 0.5em;
+        padding-bottom: 80px;
+    }
+
+    .second-heading-name {
+        margin-top: -63px;
+    }
     
+    .third-heading {
+        background-color: #000000;
+        color: #813e96;
+        line-height: 40px;
+        margin-top: 30px;
+        margin-bottom: 50px; 
+        font-size: 2.7em;
+        text-align: center;
+        border-radius: 30px 30px 0px 0px;
+        border-top: 5px double;
+        padding: 0.5em;
+        padding-bottom: 120px;
+    }
+
+    .third-heading-name {
+        margin-top: -63px;
+    }
+
     h3 {
         border-bottom: 5px double;
         background-color: #000000;
         color: #813e96;
         padding: 0.5em;
         text-align: center;
-        margin-bottom: -1px; 
+        margin-bottom: -1px;
     }
     
     footer p{
