--- a/lesson03/style.css
+++ b/lesson03/style.css
@@ -1,25 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&family=Raleway:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Charm&family=Raleway:wght@200&display=swap');
 
 h1,
 h2,
-h3,
 h4,
 h5,
 h6 {
-  font-family: 'Oleo Script Swash Caps', cursive;
-  background-color: #fdf0ba;
+  font-family: 'Charm', cursive;
+  background-color: #D9DBF1;
   padding: 0.5em;
 }
 
+h3 {
+  font-family: 'Charm', cursive;
+}
+
+h1 {
+  margin-top: -5px;
+}
+
 .town {
-    margin-bottom: -45px;
+    margin-bottom: -20px;
 }
 
 img {
-    display: grid;
-    grid-column: 1;
-    grid-row: 2;
-    margin-left: 200px;
+    margin-left: 0px;
     max-width: 100%;
     margin-top: 10px;
 }
@@ -35,16 +39,18 @@ header {
   
 }
 nav ul {
+  text-align: center;
   list-style: none;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(6em, 1fr));
   margin: 0;
+  margin-left: -80px;
 }
 nav a:hover {
   color: black;
 }
 nav {
-  color: #290036;
+  color: #73628A;
   padding: 20px;
   line-height: 25px;
 }
@@ -53,6 +59,16 @@ main {
   padding: 5px;
 }
 body {
-  background-color: #be8ad3;
+  background-color: #F9F9ED;
   padding: 10px;
+}
+
+footer {
+    text-align: center;
+}
+
+form {
+  text-align: right;
+  padding-bottom: 5px;
+  margin-top: 20px;
 }
