--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Charm&family=Raleway:wght@200&display=swap');
 
 
 @media only screen and (min-width: 37.5em) {
@@ -17,16 +17,10 @@
         padding: .6em ;
     }
 
-    nav button {
-        font-size: 1em ;
-    }
-
     nav ul.open {
         font-size: 1.4em ;
         margin: 0 ;
     }
-
-    /* Main */
 
     main div, article {
         margin: .5em ;
@@ -69,40 +63,10 @@
         margin: 3px ;
     }
 
-    /* Footer */
-
     footer {
         font-size: .6em ;
         display: grid ;
         grid-template-columns: repeat( 3, 1fr ) ;
-    }
-
-    footer img {
-        width: 100px ;
-    }
-
-    .footer-logo {
-        grid-column: 1/3 ;
-        display: grid ;
-        grid-template-columns: .4fr 1fr ;
-    }
-
-    .footer-logo a {
-        grid-column: 1/2 ;
-        grid-row: 1/4 ;
-    }
-
-    .footer-logo h1, h2 {
-        grid-column: 2/3 ;
-        text-align: left ;
-    }
-
-    .footer-logo h3 {
-        font-size: 1.2em ;
-    }
-
-    .information {
-        grid-column: 3/4 ;
     }
 
     .down-footer {
@@ -129,9 +93,3 @@
         border-right: 2px solid #FFF ;
     }
 }
-
-
-.social {
-    margin-left: 750px;
-    margin-top: -85px;
-  }
