--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -59,6 +59,7 @@
         grid-column: 2/4 ;
         grid-row: 1/3 ;
         height: auto ;
+        margin-top: 10px;
     }
 
     .news-release {
