--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -113,6 +113,10 @@ main div, article {
 	height: 200px ;
 }
 
+.hero {
+	margin-top: 30px;
+}
+
 .join {
 	display: none ;
 }
@@ -148,6 +152,11 @@ footer {
 	font-size: 1.4em ;
 	display: block ;
 	margin: .3em ;
+}
+
+#update {
+	grid-column: 5/7 ;
+    grid-row: 1/3 ;
 }
 
 hr {
