--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -8,6 +8,12 @@
 
     .current-date {
         font-size: 1em ;
+        display: flex ;
+	    flex-direction: row ;
+	    text-align: center ;
+	    background-color: #D9DBF1 ;
+	    padding: .4em ;
+	    margin: .8em ;
     }
 
     .social {
@@ -108,10 +114,4 @@
         grid-column: 5/7 ;
         grid-row: 1/3 ;
     }
-
-    .social {
-        margin-left: 1300px;
-        margin-top: -150px;
-      }
-
 }
