--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -15,10 +15,6 @@ h3 {
   font-family: 'Charm', cursive;
 }
 
-h1 {
-  margin-top: -5px;
-}
-
 .year {
 	margin: 0.5rem;
 	border: 1px solid #bbb;
@@ -29,13 +25,21 @@ h1 {
 }
 
 .town {
+	margin-top: -5px;
     margin-bottom: -10px;
 }
 
-img {
-    margin-left: 0px;
+h1 {
+	margin-top: -5px;
+	margin: auto;
+	margin-bottom: 25px;
+  }
+
+#logo {
+    margin: auto;
     max-width: 100%;
     margin-top: 10px;
+	margin-bottom: 15px;
 }
 
 body {
@@ -58,8 +62,13 @@ header {
 }
 
 .social {
-	margin-left: 1300px;
-    margin-top: -150px;
+	position: absolute;
+	right: 20px;
+	top: 30px;
+}
+
+.socialmedia {
+	width: 40px;
   }
 
 nav ul {
