--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -27,7 +27,8 @@
 
     nav ul {
         align-items: center;
-        font-size: 1.3rem ;
+        font-size: 1.2rem ;
+        padding: .5rem 1rem;
         font-family: 'Raleway', sans-serif;
 	    list-style: none ;
 	    display: grid;
