--- a/bom/bom.css
+++ b/bom/bom.css
@@ -1,9 +1,29 @@
 @import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
 
-* {
-	margin: 0;
-	padding: 0;
+@media only screen and (min-width: 32.5em) {
+	h1 {
+		font-size: 2rem;
+	}
+
+	main {
+		width: 480px;
+	}
 }
+
+:root {
+    --Primary_color: #a58bb3;
+    --Secondary_color: #e1dfdf;
+    --Accent1: #2d0f48;
+    --Accent2: #2d0f48;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: Sansita, Ubuntu, and sans-serif;
+}
+
 body {
 	height: 100vh;
 	display: flex;
@@ -12,20 +32,26 @@ body {
 	justify-content: center;
 	font-size: 18px;
 	font-family: Acme, Arial, sans-serif;
+	background-color: var(--Primary_color);
+    color: var(--Accent1);
+}
+
+header {
+    padding: 2rem 1rem;
+    max-width: 800px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 h1 {
-	font-size: 1.5rem;
+    font-size: 2.5rem;
+    font-weight: 300;
+    color: var(--Accent2);
+    margin-bottom: 1rem;
 }
 
-main {
-	margin: 0.5rem auto;
-	border: 1px solid rgba(0, 0, 0, 0.2);
-	padding: 0.5rem;
-	background-color: #bed;
-	display: grid;
-	grid-template-columns: 1fr;
-	width: 95%;
+#new-chapter {
+    display: flex;
 }
 
 input,
@@ -34,6 +60,143 @@ button {
 	margin-left: 1rem;
 	font-size: 1.1rem;
 }
+
+#favChap-input {
+    flex: 1 1 0%;
+    background-color: var(--Secondary_color);
+    padding: 1rem;
+    border-radius: 1rem;
+    margin-right: 1rem;
+    color: var(--Accent1);
+    font-size: 1.25rem;
+}
+
+#favChap-input::placeholder {
+    color: var(--Accent1);
+}
+
+#favChap-submit {
+    color: var(--Secondary_color);
+    font-size: 1.25rem;
+    font-weight: 700;
+	background-color: var(--Accent1);
+    cursor: pointer;
+    transition: 0.4s;
+	padding: 1rem;
+    border-radius: 1rem;
+    margin-right: 1rem;
+}
+
+#favChap-submit:hover {
+    opacity: 0.8;
+}
+
+#favChap-submit:active {
+    opacity: 0.6;
+}
+
+main {
+	margin: 0.5rem auto;
+	max-width: 800px;
+    width: 100%;
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	padding: 0.5rem;
+	background-color: rgb(187, 175, 175);
+	display: grid;
+	grid-template-columns: 1fr;
+}
+
+.chapterlist {
+    padding: 1rem;
+}
+
+.listcontainer h2 {
+    font-size: 1.5rem;
+    font-weight: 300;
+    color: var(--Accent2);
+    margin-bottom: 1rem;
+
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	margin: 1rem;
+	padding: 1rem;
+
+}
+
+#chapters, 
+.chapter {
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--Accent1);
+    padding: 1rem;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+}
+
+#chapters, 
+.chapter, 
+.content, 
+.text {
+    color: var(--Primary_color);
+    font-size: 1.125rem;
+    width: 100%;
+    display: block;
+    transition: 0.4s;
+}
+
+.text {
+	font-size: 1.1rem;
+	margin-left: -10px;
+}
+
+#chapters, 
+.chapter, 
+.content, 
+.text:not(:read-only) {
+    color: var(--Secondary_color);
+}
+
+#chapters, 
+.chapter, 
+.actions {
+    display: flex;
+    margin: 0 -0.5rem;
+}
+
+.chapter, 
+.actions button {
+    cursor: pointer;
+    margin: 0 0.5rem;
+    font-size: 1.125rem;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.chapter, 
+.actions button:hover {
+    opacity: 0.8;
+}
+
+.chapter, 
+.actions button:active {
+    opacity: 0.6;
+}
+
+.chapter, 
+.actions, 
+.edit {
+    color: var(--Accent1);
+    background-color: var(--Primary_color);
+}
+
+.chapter, 
+.actions, 
+.delete {
+    color: var(--Accent1);
+	background-color: var(--Primary_color);
+}
+
+
+
 
 input {
 	width: 200px;
@@ -64,170 +227,3 @@ li {
 	margin-bottom: 0.5rem;
 }
 
-@media only screen and (min-width: 32.5em) {
-	h1 {
-		font-size: 2rem;
-	}
-
-	main {
-		width: 480px;
-	}
-}
-
-
-
-
-:root {
-    --Primary_color: #153158;
-    --Secondary_color: #85C6E2;
-    --Accent1: #FFFFFF;
-    --Accent2: #C2C2C2;
-}
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: Sansita, Ubuntu, and sans-serif;
-}
-
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    background-color: var(--Primary_color);
-    color: var(--Accent1);
-}
-
-header {
-    padding: 2rem 1rem;
-    max-width: 800px;
-    width: 100%;
-    margin: 0 auto;
-}
-
-header h1 {
-    font-size: 2.5rem;
-    font-weight: 300;
-    color: var(--Accent2);
-    margin-bottom: 1rem;
-}
-
-#new-chapter-form {
-    display: flex;
-}
-
-input,
-button {
-    appearance: none;
-    border: none;
-    outline: none;
-    background: none;
-}
-
-#new-chapter-input {
-    flex: 1 1 0%;
-    background-color: var(--Secondary_color);
-    padding: 1rem;
-    border-radius: 1rem;
-    margin-right: 1rem;
-    color: var(--Accent1);
-    font-size: 1.25rem;
-}
-
-#new-chapter-input::placeholder {
-    color: var(--Accent1);
-}
-
-#new-chapter-submit {
-    color: var(--Accent2);
-    font-size: 1.25rem;
-    font-weight: 700;
-    background-image: linear-gradient(to right, var(--Accent1), var(--Secondary_color));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    cursor: pointer;
-    transition: 0.4s;
-}
-
-#new-chapter-submit:hover {
-    opacity: 0.8;
-}
-
-#new-chapter-submit:active {
-    opacity: 0.6;
-}
-
-main {
-    flex: 1 1 0%;
-    max-width: 800px;
-    width: 100%;
-    margin: 0 auto;
-}
-
-.chapterlist {
-    padding: 1rem;
-}
-
-.listcontainer h2 {
-    font-size: 1.5rem;
-    font-weight: 300;
-    color: var(--Accent2);
-    margin-bottom: 1rem;
-}
-
-#chapters .chapter {
-    display: flex;
-    justify-content: space-between;
-    background-color: var(--Accent1);
-    padding: 1rem;
-    border-radius: 1rem;
-    margin-bottom: 1rem;
-}
-
-#chapters .chapter .content .text {
-    color: var(--Primary_color);
-    font-size: 1.125rem;
-    width: 100%;
-    display: block;
-    transition: 0.4s;
-}
-
-#chapters .chapter .content .text:not(:read-only) {
-    color: var(--Secondary_color);
-}
-
-#chapters .chapter .actions {
-    display: flex;
-    margin: 0 -0.5rem;
-}
-
-.chapter .actions button {
-    cursor: pointer;
-    margin: 0 0.5rem;
-    font-size: 1.125rem;
-    font-weight: 700;
-    text-transform: uppercase;
-}
-
-.chapter .actions button:hover {
-    opacity: 0.8;
-}
-
-.chapter .actions button:active {
-    opacity: 0.6;
-}
-
-.chapter .actions .edit {
-    color: var(--Accent1);
-    background-image: linear-gradient(to right, var(--Secondary_color), var(--Primary_color));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-.chapter .actions .delete {
-    color: var(--Accent1);
-    background-image: linear-gradient(to right, var(--Secondary_color), var(--Primary_color));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
