--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -69,6 +69,17 @@
         grid-row: 1/2 ;
     }
 
+    #event-rex {
+        font-size: 1rem;
+        text-align: center;
+    }
+
+    #event-info {
+        font-size: 0.8rem;
+        margin-top: -20px;
+        text-align: center;
+    }
+
     .weather {
         grid-column: 1/2 ;
         grid-row: 2/3 ;
