--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -67,6 +67,17 @@
         grid-template-rows: repeat( 5, 1fr ) ;
     }
 
+    #event-rex {
+        font-size: 1rem;
+        text-align: center;
+    }
+
+    #event-info {
+        font-size: 0.9rem;
+        margin-top: -20px;
+        text-align: center;
+    }
+
     .hero {
         grid-column: 1/4 ;
         margin-top: 30px;
