--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -181,6 +181,17 @@ main div, article {
 	margin-top: 30px;
 }
 
+#event-rex {
+	font-size: 1rem;
+    text-align: center;
+}
+
+#event-info {
+	font-size: 0.9rem;
+	margin-top: -20px;
+	text-align: center;
+}
+
 .join {
 	display: none ;
 }
