--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -159,10 +159,10 @@ nav ul#primaryNav li:first-child a {
 	display: flex ;
 	flex-direction: row ;
 	font-size: 1.5em ;
-	color: #A57F60;
-	background-color: #D9DBF1 ;
+	color: #D9DBF1;
 	padding: 8px;
 	margin: .8em ;
+	margin-top: -2px;
 }
 
 main div, article {
