--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -69,6 +69,11 @@
         grid-row: 1/2 ;
     }
 
+    .event:hover {
+        background-color: rgba(0,0,0,0.06);
+	    color: #A57F60;
+    }
+
     #event-rex {
         font-size: 1rem;
         text-align: center;
