--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -67,6 +67,11 @@
         grid-template-rows: repeat( 5, 1fr ) ;
     }
 
+    .event:hover {
+        background-color: rgba(0,0,0,0.06);
+	    color: #A57F60;
+    }
+
     #event-rex {
         font-size: 1rem;
         text-align: center;
