--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -95,6 +95,18 @@
         grid-row: 3/4 ;
     }
 
+    #join {
+        font-size: 1.3rem;
+        text-align: center;
+        padding: 2px;
+    }
+
+    #join-info {
+        text-align: center;
+        font-size: 1.5rem;
+        margin-top: 5px;
+    }
+
     .hero {
         grid-column: 2/4 ;
         grid-row: 1/3 ;
@@ -102,9 +114,32 @@
         margin-top: 10px;
     }
 
+    .hero-header {
+        font-size: 2rem;
+        margin-top: 5px;
+    }
+
+    #rexburg-pic {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 80%;
+    }
+
     .news-release {
         grid-column: 2/4 ;
         grid-row: 3/4 ;
+    }
+
+    #news {
+        text-align: center;
+        font-size: 1.8rem;
+        padding: 1px;
+    }
+
+    #news-info {
+        text-align: center;
+        font-size: 1.3rem;
     }
 
     .spotlight {
