--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -106,7 +106,8 @@
 
     #news-info {
         text-align: center;
-        font-size: 1.1rem;
+        font-size: 1rem;
+        margin-top: -10px;
     }
 
     .spotlight {
