--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -161,6 +161,22 @@
         margin: 0 ;
     }
 
+    #spot-one {
+        font-size: 1.5rem;
+        text-align: center;
+        padding: 3px;
+    }
+
+    #slc-pic {
+        height: 80px;
+        width: auto;
+    }
+
+    #spot-one-info {
+        text-align: center;
+        margin-bottom: -2px;
+    }
+
     footer {
         font-size: .7em ;
     }
