--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -77,6 +77,7 @@
     #event-rex {
         font-size: 1rem;
         text-align: center;
+        margin-top: -8px;
     }
 
     #event-info {
@@ -174,7 +175,29 @@
 
     #spot-one-info {
         text-align: center;
+        font-size: 1rem;
         margin-bottom: -2px;
+    }
+
+    #spot-two {
+        font-size: 1.5rem;
+        text-align: center;
+        padding: 3px;
+    }
+
+    #spot-two-info {
+        font-size: 1rem;
+        text-align: center;
+    }
+
+    #bear-pic {
+        width: 300px;
+        height: auto;
+        display: block;  
+        margin-left: auto;  
+        margin-right: auto;
+        margin-top: -18px;
+        margin-bottom: 10px;
     }
 
     footer {
