--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -147,6 +147,7 @@
     #spot-one {
         font-size: 1.15rem;
         text-align: center;
+        margin-top: -7px;
         padding: 3px;
     }
 
