--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -210,6 +210,7 @@ main div, article {
 #news {
 	text-align: center;
 	font-size: 1.3rem;
+	margin-top: -8px;
 	padding: 1px;	
 }
 
@@ -240,6 +241,7 @@ main div, article {
 #spot-one {
 	font-size: 1rem;
 	text-align: center;
+	margin-top: -9px;
 	padding: 3px;
 }
 
