--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -169,8 +169,11 @@
     }
 
     #slc-pic {
-        height: 80px;
+        height: 70px;
         width: auto;
+        display: block;  
+        margin-left: auto;  
+        margin-right: auto;
     }
 
     #spot-one-info {
@@ -188,6 +191,7 @@
     #spot-two-info {
         font-size: 1rem;
         text-align: center;
+        margin-bottom: -5px;
     }
 
     #bear-pic {
@@ -196,8 +200,8 @@
         display: block;  
         margin-left: auto;  
         margin-right: auto;
-        margin-top: -18px;
-        margin-bottom: 10px;
+        margin-top: 55px;
+        margin-bottom: 15px;
     }
 
     footer {
