--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -241,20 +241,45 @@ main div, article {
 #spot-one {
 	font-size: 1rem;
 	text-align: center;
-	margin-top: -9px;
+	margin-top: -10px;
 	padding: 3px;
 }
 
 #slc-pic {
-	height: 40px;
-	width: auto;
-	margin-top: -19px;
+	width: 100px;
+	height: auto;
+	margin-left: -70px;
+	margin-bottom: 5px;
+	margin-top: 50px;
 }
 
 #spot-one-info {
 	text-align: center;
 	font-size: 0.7rem;
 	margin-bottom: -2px;
+	margin-top: -70px;
+}
+
+#spot-two {
+	font-size: 1rem;
+	text-align: center;
+	margin-top: -10px;
+	padding: 3px;
+}
+
+#spot-two-info {
+	font-size: 0.9em;
+	text-align: center;
+	margin-bottom: -2px;
+	margin-top: -50px;
+}
+
+#bear-pic {
+	width: 100px;
+	height: auto;
+	margin-left: -130px;
+	margin-bottom: 5px;
+	margin-top: 30px;
 }
 
 footer {
