--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -179,6 +179,7 @@ main div, article {
 
 .hero {
 	margin-top: 30px;
+
 }
 
 .hero-header {
@@ -188,13 +189,10 @@ main div, article {
 }
 
 #rexburg-pic {
-	height: 220px;
-	width: 385px;
-	display: block;
-    margin-left: auto;
-    margin-right: auto;
-	margin-top: -70px;
-	background-image: url(demo.jpg);
+    margin: 0 0 0 0;
+	margin-top: -20px;
+    width: 100%;
+    height: 85%;
 }
 
 #event-rex {
@@ -206,6 +204,17 @@ main div, article {
 	font-size: 0.9rem;
 	margin-top: -20px;
 	text-align: center;
+}
+
+#weather {
+	font-size: 1.3rem;
+	text-align: center;
+	padding: 2px;
+	margin-top: -8px;
+}
+
+#weather-info {
+	text-align: left;
 }
 
 .join {
