--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -198,6 +198,7 @@ main div, article {
 #event-rex {
 	font-size: 1rem;
     text-align: center;
+	margin-top: -7px;
 }
 
 #event-info {
@@ -245,11 +246,11 @@ main div, article {
 }
 
 .spot {
-	background-color: #F9F9ED ;
-	border: 1px solid #a5a5a5 ;
-	width: auto ;
-	height: 150px ;
-	padding: 1em ;
+	background-color: #F9F9ED;
+	border: 1px solid #a5a5a5;
+	width: auto;
+	height: 150px;
+	padding: 1rem;
 }
 
 #spot-one {
