--- a/bom/bom.css
+++ b/bom/bom.css
@@ -119,7 +119,15 @@ main {
 	border: 1px solid rgba(0, 0, 0, 0.2);
 	margin: 1rem;
 	padding: 1rem;
+}
 
+#chapters {
+    display: flex;
+    flex-direction: column;
+}
+
+.chapter {
+    margin: 5px;
 }
 
 #chapters, 
@@ -129,7 +137,6 @@ main {
     background-color: var(--Accent1);
     padding: 1rem;
     border-radius: 1rem;
-    margin-bottom: 1rem;
 }
 
 #chapters, 
@@ -159,13 +166,11 @@ main {
 .chapter, 
 .actions {
     display: flex;
-    margin: 0 -0.5rem;
 }
 
 .chapter, 
 .actions button {
     cursor: pointer;
-    margin: 0 0.5rem;
     font-size: 1.125rem;
     font-weight: 700;
     text-transform: uppercase;
