--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -67,6 +67,7 @@
     .event {
         grid-column: 1/2 ;
         grid-row: 1/2 ;
+        height: auto;
     }
 
     #event-rex {
@@ -84,6 +85,7 @@
     .weather {
         grid-column: 1/2 ;
         grid-row: 2/3 ;
+        height: auto;
     }
 
     #weather {
