--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -92,6 +92,26 @@
         padding: 2px;
         margin-top: -8px;
     }
+    
+    #wind {
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+        padding-left: 5px;
+        margin-bottom: -7px;
+    }
+
+    #button {
+        width: 55px;
+        text-align: center;
+        margin-left: 40px;
+    }
+
+    #weather-pic {
+        height: 60px;
+        float:left;
+        margin-top: -20px;
+    }
 
     .hero {
         grid-column: 1/4 ;
