--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -56,12 +56,13 @@
     main {
         display: grid ;
         grid-template-columns: repeat( 4, 1fr) ;
-        grid-template-rows: repeat( 3, 1fr ) ;
+        grid-template-rows: repeat( 3, auto) ;
     }
 
     main div, article {
         font-size: 1rem ;
         margin: .6em ;
+        height: auto;
     }
 
     .event {
@@ -85,7 +86,6 @@
     .weather {
         grid-column: 1/2 ;
         grid-row: 2/3 ;
-        height: auto;
     }
 
     #weather {
@@ -116,7 +116,6 @@
     .join {
         grid-column: 1/2 ;
         grid-row: 3/4 ;
-        height: auto;
     }
 
     #join {
@@ -134,25 +133,24 @@
     .hero {
         grid-column: 2/4 ;
         grid-row: 1/3 ;
-        height: auto ;
-        margin-top: 10px;
+        padding: 0;
     }
 
     .hero-header {
         font-size: 2rem;
         margin-top: 5px;
+        position: absolute;
     }
 
     #rexburg-pic {
         margin: 0 0 0 0;
         width: 100%;
-        height: auto;
+        height: 100%;
     }
 
     .news-release {
         grid-column: 2/4 ;
         grid-row: 3/4 ;
-        height: auto;
     }
 
     #news {
@@ -170,7 +168,6 @@
     .spotlight {
         grid-column: 4/5 ;
         grid-row: 1/4 ;
-        height: auto ;
         display: flex ;
         flex-direction: column ;
     }
