--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -81,9 +81,8 @@
 
     #rexburg-pic {
         margin: 0 0 0 0;
-        margin-top: -20px;
         width: 100%;
-        height: 85%;
+        height: 100%;
     }
 
     #weather {
@@ -115,11 +114,12 @@
 
     .hero {
         grid-column: 1/4 ;
+        padding: 0;
     }
 
     .hero-header {
         font-size: 1.5rem;
-        margin-top: -2px;
+        position:absolute;
     }
 
     .news-release {
