--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -272,4 +272,12 @@
         grid-column: 5/7 ;
         grid-row: 1/3 ;
     }
+
+    .shape-outside {
+        border-radius: 100px; 
+        width:35%; 
+        margin: 0 3em .5em 0; 
+        float:left; 
+        shape-outside: circle();
+    }
 }
