--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -280,4 +280,140 @@
         float:left; 
         shape-outside: circle();
     }
+
+    h1 {
+      font-family: "Josefin Sans", Arial, serif;
+      background-color: #D9DBF1;
+      padding: 5px;
+      width: 550px;
+    }
+    
+    body {
+      background-color: white;
+      font-family: "Roboto Condensed", Arial, sans-serif;
+    }
+    
+    main {
+      background-color: #F9F9ED;
+      padding: 10px;
+    }
+    
+    img {
+      max-width: 100%;
+      margin-top: 10px;
+    }
+    
+    body {
+      background-color: #D9DBF1;
+      padding: 10px;
+    }
+    
+    #home-grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+      grid-gap: 1em;
+    }
+    
+    .rexTempleHeading {
+      grid-column: 1/2;
+      grid-row: 1/2;
+      margin-bottom: 25px;
+    }
+    
+    .home-paragraph-1 {
+        grid-column: 1/4;
+        grid-row: 2/3;
+        margin-top: -10px;
+    }
+    
+    .rexTemple {
+      grid-column: 2/4;
+      grid-row: 1/3;
+      border: 0.5px solid #ccc;
+      padding: 5px;
+      box-shadow: 5px 5px 5px #999;
+      margin-top: 40px;
+    }
+    
+    .farmHeading {
+      grid-column: 4/6;
+      grid-row: 1/4;
+    }
+    
+    .home-paragraph-2 {
+      grid-column: 3/6;
+      grid-row: 4/6;
+      margin-top: 0px;
+    }
+    
+    .farm {
+      grid-column: 5/8;
+      grid-row: 1/5;
+      border: 0.5px solid #ccc;
+      padding: 5px;
+      box-shadow: 5px 5px 5px #999;
+    }
+    
+    .schoolHeading {
+      grid-column: 1/5;
+      grid-row: 3/4;
+    }
+    
+    .home-paragraph-3 {
+      grid-column: 1/4;
+      grid-row: 6/8;
+      margin-top: 0px;
+    }
+    
+    .school {
+      grid-column: 4/6;
+      grid-row: 6/7;
+      border: 0.5px solid #ccc;
+      padding: 5px;
+      box-shadow: 5px 5px 5px #999;
+      margin-top: -50px;
+    }
+    
+    .waterTowerHeading {
+      grid-column: 4/7;
+      grid-row: 7/8;
+    }
+    
+    .home-paragraph-4 {
+      grid-column: 3/7;
+      grid-row: 8/10;
+      margin-top: 0px;
+    }
+    
+    .waterTower {
+      grid-column: 1/3;
+      grid-row: 7/9;
+      border: 0.5px solid #ccc;
+      padding: 5px;
+      box-shadow: 5px 5px 5px #999;
+      margin-top: 70px;
+    }
+    
+    .rexTabHeading {
+      grid-column: 1/4;
+      grid-row: 9/10;
+      margin-top: 40px;
+    }
+    
+    .home-paragraph-5 {
+      grid-column: 1/4;
+      grid-row: 10/12;
+      margin-top: 0px;
+    }
+    
+    .rexTab {
+      grid-column: 4/6;
+      grid-row: 10/15;
+      border: 0.5px solid #ccc;
+      padding: 5px;
+      box-shadow: 5px 5px 5px #999;
+      margin-top: -40px;
+    }
+    
+
 }
