--- a/lesson7/css/lazy.css
+++ b/lesson7/css/lazy.css
@@ -1,159 +1,54 @@
-img {
-    min-width: 50px;
-    min-height: 50px;
-    border: 1px solid red;
-}
-
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@1&display=swap');
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1 {
   font-family: "Josefin Sans", Arial, serif;
-  background-color: #B6D0E2;
-  padding: 0.5em;
+  background-color: #D9DBF1;
+  padding: 5px;
+  width: 550px;
 }
 
 body {
-  background-color: white;
-  font-family: "Roboto Condensed", Arial, sans-serif;
+  background-color: #D9DBF1;
+  font-family: 'Open Sans', sans-serif ;
+  font-size: 16px ;
+  border-radius: 1em ;
+  margin: 0 ;
+  padding: 0 ;
 }
+
 header {
-  align-items: center;
-  display: grid;
-  grid-template-columns: 110px auto;
+	margin: auto ;
+	padding-bottom: 1em ;
 }
-nav ul {
-  list-style: none;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(6em, 1fr));
-  margin: 0;
-}
-nav a:hover {
-  color: black;
-}
-nav a {
-  color: #B24C63;
-  padding: 10px;
-}
-main {
-  background-color: white;
-  padding: 10px;
-}
-img {
-  max-width: 100%;
-  margin-top: 10px;
-}
-body {
-  background-color: #FFB997;
-  padding: 10px;
-}
-.logo-box {
-  bachground-color: white;
-  padding: 0.5em;
-}
-#content {
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 1em;
-}
-.home-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-gap: 1em;
-}
-.home-headline-1 {
-  grid-column: 1/4;
-  grid-row: 1/2;
-  margin-bottom: 25px;
-}
-.home-paragraph-1 {
-  grid-column: 1/4;
-  grid-row: 2/3;
-  margin-top: -10px;
-}
-.home-right-img1 {
-  grid-column: 4/6;
-  grid-row: 1/3;
-  border: 0.5px solid #ccc;
-  padding: 10px;
-  box-shaddow: 5px 5px 5px #999;
-  margin-top: 40px;
-}
-.home-headline-2 {
-  grid-column: 4/6;
-  grid-row: 3/4;
-}
-.home-paragraph-2 {
-  grid-column: 3/6;
-  grid-row: 4/6;
-  margin-top: 0px;
-}
-.home-left-img1 {
-  grid-column: 1/3;
-  grid-row: 3/6;
-  border: 0.5px solid #ccc;
-  padding: 10px;
-  box-shaddow: 5px 5px 5px #999;
-}
-.home-headline-3 {
-  grid-column: 1/3;
-  grid-row: 5/6;
-  margin-top: 130px;
-}
-.home-paragraph-3 {
-  grid-column: 1/4;
-  grid-row: 6/8;
-  margin-top: 0px;
-}
-.home-right-img2 {
-  grid-column: 4/6;
-  grid-row: 6/7;
-  border: 0.5px solid #ccc;
-  padding: 10px;
-  box-shaddow: 5px 5px 5px #999;
-  margin-top: -50px;
-}
-.home-headline-4 {
-  grid-column: 4/7;
-  grid-row: 7/8;
-}
-.home-paragraph-4 {
-  grid-column: 3/7;
-  grid-row: 8/10;
-  margin-top: 0px;
-}
-.home-left-img2 {
-  grid-column: 1/3;
-  grid-row: 7/9;
-  border: 0.5px solid #ccc;
-  padding: 10px;
-  box-shaddow: 5px 5px 5px #999;
-  margin-top: 70px;
-}
-.home-headline-5 {
-  grid-column: 1/4;
-  grid-row: 9/10;
-  margin-top: 40px;
-}
-.home-paragraph-5 {
-  grid-column: 1/4;
-  grid-row: 10/12;
-  margin-top: 0px;
-}
-.home-right-img3 {
-  grid-column: 4/6;
-  grid-row: ;
-  border: 0.5px solid #ccc;
-  padding: 10px;
-  box-shaddow: 5px 5px 5px #999;
-  margin-top: -40px;
-}
+
 footer {
-  height: 55px;
-  margin-top: 35px;
+	padding: 1em ;
+}
+
+header, footer {
+    background-color: rgb(74, 57, 98) ;
+    text-align: center ;
+    color: white ;
+}
+
+main {
+    display: flex ;
+    flex-direction: column ;
+    text-align: center ;
+	max-width: 770px ;
+	margin: 0 auto ;
+}
+
+img[data-src] {
+    filter: blur( 0.2em ) ;
+  }
+
+img {
+    filter: blur( 0em ) ;
+    transition: filter 2s ;
+  }
+
+#heading {
+    text-align: center;
 }
