--- a/lesson3/css/medium.css
+++ b/lesson3/css/medium.css
@@ -1,3 +1,5 @@
+@media only screen and (min-width: 37.5em) {
+
 nav ul {
     text-align: center;
     list-style: none;
@@ -11,3 +13,4 @@ nav ul {
   nav ul li {
       padding: 5px;
   }
+}
