--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -28,7 +28,7 @@ table {
     font-size: 0.8rem;
     margin: auto;
     max-width: 275px;
-    box-shadow: 10px 10px 20px #628ca6;
+    box-shadow: 10px 10px 20px #48708a;
 }
 
 td,
@@ -38,7 +38,7 @@ th {
 }
 
 th {
-    background-color: #628ca6;
+    background-color: #5182a0;
     padding-top: 12px;
     padding-bottom: 12px;
     color: white;
@@ -49,11 +49,11 @@ td {
 }
 
 tr:nth-child(even) td {
-    background-color: #e7ffed;
+    background-color: #c8f5d3;
 }
 
 tr:nth-child(odd) td {
-    background-color: #e7f0ed;
+    background-color: #d3d6d5;
 }
 
 caption {
@@ -62,6 +62,9 @@ caption {
 
 tbody {
     font-size: 95%;
+}
+
+.special {
     font-style: italic;
 }
 
@@ -76,15 +79,17 @@ tr:nth-child(even) {
 
 #header,
 #footer {
-    background-color: #7fb9c2;
+    background-color: #52bdb7;
 }
 
 #header {
-    color: white;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
 }
 
 #currentGoal {
     background-color: #628ca6;
+    color: white;
 }
 
 tfoot {
