--- a/lesson8/css/large.css
+++ b/lesson8/css/large.css
@@ -3,10 +3,6 @@
         font-family: 'Ubuntu', sans-serif;
     }
 
-    h1 {
-        text-align: center;
-    }
-
     table {
         border-collapse: collapse;
         border: 1px solid #acbabc;
@@ -15,7 +11,7 @@
         margin: auto;
         max-width: 275px;
         height: 300px;
-        box-shadow: 10px 10px 20px #628ca6;
+        box-shadow: 10px 10px 20px #48708a;
     }
 
     td,
@@ -23,21 +19,8 @@
         border: 1px solid #acbabc;
     }
 
-    th {
-        background-color: #628ca6;
-        color: white;
-    }
-
     td {
         text-align: center;
-    }
-
-    tr:nth-child(even) td {
-        background-color: #e7ffed;
-    }
-
-    tr:nth-child(odd) td {
-        background-color: #e7f0ed;
     }
 
     tbody {
@@ -50,26 +33,8 @@
         font-weight: bold;
     }
 
-    tr:hover,
-    tr:nth-child(even):hover {
-        background-color: black;
-    }
-
-    tr:nth-child(even) {
-        background-color: green;
-    }
-
-    #header,
-    #footer {
-        background-color: #7fb9c2;
-        color: black;
-    }
-
     footer {
         font-weight: normal;
     }
 
-    #currentGoal {
-        background-color: #628ca6;
-    }
 }
