--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Charm&family=Raleway:wght@200&display=swap');
 
+/* Class is . Id is # */
 
 h1,
 h2,
@@ -344,4 +345,47 @@ hr {
 
 .down-footer p {
 	margin: .2em ;
+}
+
+
+* {
+	box-sizing: border-box;
+}
+
+#join-main {
+	margin: 5px;
+	border: 1px solid #bbb;
+	padding: 0.5rem;
+	width: 450px;
+	background-color: #abe;
+}
+
+#join-box {
+	display: grid;
+	grid-gap: 0.25rem;
+	grid-template-columns: 1fr 1fr;
+	width: 400px;
+	align-items: center;
+}
+
+#join-greeting {
+	font-size: 1.5rem;
+	text-align: center;
+}
+
+label,
+input,
+textarea,
+select,
+button {
+	padding: 0.35rem;
+	font-size: 1.1rem;
+}
+
+label {
+	text-align: right;
+}
+
+button {
+	grid-column: 1/3;
 }
