--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -61,7 +61,7 @@
         margin: .5em ;
     }
 
-    main {
+    #main {
         display: grid ;
         grid-template-columns: repeat( 3, 1fr) ;
         grid-template-rows: repeat( 5, 1fr ) ;
@@ -262,10 +262,7 @@
     }
     
     #join-box {
-        display: grid;
-        grid-gap: 0.25rem;
-        grid-template-columns: 1fr 1fr;
-        width: 400px;
+        width: 100%;
         align-items: center;
     }
     
@@ -282,11 +279,7 @@
         padding: 0.35rem;
         font-size: 1.1rem;
     }
-    
-    label {
-        text-align: right;
-    }
-    
+
     button {
         grid-column: 1/3;
     }
