--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -53,7 +53,7 @@
         display: none ;
     }
 
-    main {
+    #main {
         display: grid ;
         grid-template-columns: repeat( 4, 1fr) ;
         grid-template-rows: repeat( 3, auto) ;
@@ -423,15 +423,12 @@
         margin: 5px;
         border: 1px solid #bbb;
         padding: 0.5rem;
-        width: 450px;
+        width: 100%;
         background-color: #abe;
     }
     
     #join-box {
-        display: grid;
-        grid-gap: 0.25rem;
-        grid-template-columns: 1fr 1fr;
-        width: 400px;
+        width: 100%;
         align-items: center;
     }
     
@@ -447,10 +444,6 @@
     button {
         padding: 0.35rem;
         font-size: 1.1rem;
-    }
-    
-    label {
-        text-align: right;
     }
     
     button {
