--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -27,12 +27,6 @@
         margin-top: -2px;
     }
 
-    .social {
-        position: absolute;
-        right: 30px;
-        top: 190px;
-    }
-
     .social svg {
         width: 35px;
         height: auto;
@@ -55,7 +49,7 @@
 
     #main {
         display: grid ;
-        grid-template-columns: repeat( 4, 1fr) ;
+        grid-template-columns: repeat( 4, auto) ;
         grid-template-rows: repeat( 3, auto) ;
     }
 
@@ -285,7 +279,6 @@
       font-family: "Josefin Sans", Arial, serif;
       background-color: #D9DBF1;
       padding: 5px;
-      width: 550px;
     }
     
     body {
