--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -6,11 +6,6 @@
         font-size: .8em ;
     }
 
-    header img {
-        width: 200px ;
-        height: auto;
-    }
-
     .social {
         position: absolute;
         right: 30px;
@@ -71,6 +66,7 @@
         font-size: 1rem;
         text-align: center;
         margin-top: 2px;
+        margin-bottom: 25px;
     }
 
     #event-info {
@@ -109,7 +105,7 @@
     #weather-pic {
         height: 60px;
         float:left;
-        margin-top: -20px;
+        margin-top: -8px;
     }
 
     .hero {
@@ -122,6 +118,20 @@
         position: absolute;
     }
 
+    #logo {
+        margin: 10px;
+    }
+
+    #title {
+        align-self: center;
+    }
+
+    #flex-header {
+        display: flex;
+        flex-direction: row;
+        align-content: center;
+    }
+
     .news-release {
         grid-column: 1/4 ;
         grid-row: 2/3 ;
@@ -131,6 +141,7 @@
         text-align: center;
         font-size: 1.6rem;
         padding: 1px;
+        margin-bottom: 25px;
     }
 
     #news-info {
