--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -551,6 +551,11 @@ img {
 	font-size: 2rem;
 }
 
+#weather-icon {
+	height: 100px;
+	width: auto;
+}
+
 .grid {
 	display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
