--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -421,15 +421,29 @@
     }
     
     #join-box {
-        width: 100%;
+        width: 50%;
         align-items: center;
+        margin: auto;
     }
     
     #join-greeting {
         font-size: 1.5rem;
         text-align: center;
     }
-    
+
+    #join-layout {
+        display: grid;
+        grid-template-columns: 70% 30%;
+    }
+
+    .label {
+        display: inline;
+    }
+
+    #memLev div {
+        border: none;
+    }
+
     label,
     input,
     textarea,
