--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -234,6 +234,7 @@ main div, article {
 
 #weather-info {
 	text-align: left;
+	text-transform: capitalize;
 }
 
 #wind {
@@ -251,9 +252,11 @@ main div, article {
 }
 
 #weather-pic {
-	height: 120px;
+	height: 100px;
+	width: auto;
 	float:left;
-	margin-top: -8px;
+	margin-right: 10px;
+	margin-top: 20px;
 }
 
 .join {
@@ -567,6 +570,16 @@ img {
 #weather-icon {
 	height: 100px;
 	width: auto;
+}
+
+#weather-info {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+}
+
+#weatherText {
+	border: none;
+	margin-left: -50px;
 }
 
 #rex-info {
