--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -103,7 +103,8 @@
         height: 100px;
         width: auto;
         float:left;
-        margin-top: -10px;
+        margin-top: 10px;
+        margin-right: 40px;
     }
 
     .join {
