--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -105,7 +105,8 @@
     #weather-pic {
         height: 60px;
         float:left;
-        margin-top: -8px;
+        margin-top: 30px;
+        margin-right: 50px;
     }
 
     .hero {
