--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -585,6 +585,12 @@ img {
 	text-align: center;
 }
 
+#thank-you {
+	text-align: center;
+	font-size: 80px;
+	padding: 50px;
+}
+
 .grid {
 	display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
